# diansai

./: .gitignore  CMakeLists.txt  CMakePresets.json  MSPM0G3507_PINOUT.md  README.md  main.c  nuedc_car.syscfg  pin_map.h  platformio.ini  ti_msp_dl_config.c  ti_msp_dl_config.h  wake
app/: app_main.c  app_main.h  app_tracking.c  app_tracking.h
bsp/: bsp_adc.c  bsp_adc.h  bsp_encoder.c  bsp_encoder.h  bsp_imu.c  bsp_imu.h  bsp_k230.c  bsp_motor.c  bsp_motor.h  bsp_notify.c  bsp_oled.c  bsp_oled.h  bsp_stub_debug.c  bsp_uart.c  bsp_ultrasonic.c  bsp_ultrasonic.h
ccs/: nuedc_car_gcc.projectspec
middleware/: protocol.c  protocol.h  protocol_stub_debug.c  telemetry.c  telemetry.h
scripts/: build.sh  check_env.sh  cmake_configure.sh  env.sh  flash.sh  flash_jlink.sh  flash_openocd.sh  generate_syscfg.sh  import_ccs_project.sh  install_sdk_hint.sh  install_udev_hint.sh  jlink_gdb_server.sh  open_pid_dashboard.sh  pid_session.sh  probe_board.sh  rtt_client.sh  setup_pid_env.sh  start.sh
tools/esp32_wifi_uart_bridge/: esp32_wifi_uart_bridge.ino
tools/openocd/: mspm0g3507.cfg
tools/pid/: README.md  capture_rtt.py  capture_session.py  pid_analyze.ipynb  pid_dashboard.py  pid_monitor.py  pid_terminal.py  pid_tune.py  pid_web_server.py  requirements.txt
tools/pid/web/: app.js  index.html  style.css
